src/test/run-pass/drop-bind-thunk-args.rs


fn f(x: @int) { }

fn main() { let x = @10; let ff = f(_); ff(x); ff(x); }
