src/test/compile-fail/duplicate-name.rs
// error-pattern: duplicate value name: x

fn main() {
    auto x = 10;
    let int x = 20;
}
